--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript">
 
 if (screen.width <= 699) {
-document.location = "mobile.html";
+document.location = "https://acejarvis98.wixsite.com/6666";
 }
 //-->
 </script>
