--- a/mobile.html
+++ b/mobile.html
@@ -7,7 +7,7 @@
 
   <body>
   
-     <iframe src="https://acejarvis98.wixsite.com/6666" style="position:fixed; top:-51px; left:0px; bottom:0px; right:0px; width:100%; height:108%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+     <iframe src="https://acejarvis98.wixsite.com/6666" style="position:fixed; top:-51px; left:0px;  right:0px; width:100%; height:108%; ">
 </iframe>  
     
   </body>
