--- a/mobile.html
+++ b/mobile.html
@@ -1,5 +1,5 @@
 <html>
-  <title>MAC RoboMaster</title>
+  <title>MAC RoboM</title>
   <link rel="stylesheet" type="text/css" href="website.css">
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
   <link rel="shortcut icon" type="image/png" href="ImageURL"/>
