--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="" class="btn btn-danger btn-round">Donate Us</a>
+                        <a href="" class="btn btn-danger btn-round"><i></i>Donate Us</a>
                     </li>
                 </ul>
             </div>
