--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="assets/img/favicon.ico">
@@ -82,7 +83,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="" class="btn btn-danger btn-round"><i></i>Donate Us</a>
+                        <a href="#donate" class="btn btn-danger btn-round"><i></i>Donate Us</a>
                     </li>
                 </ul>
             </div>
@@ -540,19 +541,41 @@
                     </div>
                     <br />
 
-
-                    <div class="row">
-                        <div class="col-md-12 ml-auto mr-auto">
-                            <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
-                                type="button">Join Us</button>
-                        </div>
-                    </div>
+                  
                 </div>
             </div>
 
 
 
         </div>
+
+        <!-- Donate Us -->
+        <div id="donate" class="section text-center">
+            <div class="container">
+                <h1 class="title">Why Sponsors Us</h1>
+                <div class="row">
+                        <div class="col-md-12 ml-auto mr-auto">
+                            <img src="./assets/img/logo_master.png" alt="" style="width:50%">
+                        </div>
+
+                    <div class="col-md-12 ml-auto mr-auto">
+                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
+                            type="button">Donate Us</button>
+                            <br />
+                            <br />
+                    </div>
+                    
+                    <div class="col-md-12 ml-auto mr-auto">
+                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
+                            type="button">Join Us</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
 
         <!-- Footer -->
         <footer class="footer">
