updated donate button

--- a/index.html
+++ b/index.html
@@ -559,10 +559,20 @@
                         </div>
 
                     <div class="col-md-12 ml-auto mr-auto">
-                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
-                            type="button">Donate Us</button>
-                            <br />
-                            <br />
+                            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                <input type="hidden" name="cmd" value="_s-xclick" />
+                                <input type="hidden" name="hosted_button_id" value="TMVJUH3SEQBGL" />
+                                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit"  alt="Donate with PayPal button" />
+                                <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
+                                </form>
+                                <br />
+                                <br />
+
+                    </div>
+
+                    <div class="col-md-12 ml-auto mr-auto">
+                        <img src="./assets/img/donate_qr.png" alt="" style="width:30%">
+                        <p>Or scan the above QR Code!</p>
                     </div>
                     
                     <div class="col-md-12 ml-auto mr-auto">
