--- a/index.html
+++ b/index.html
@@ -493,8 +493,90 @@
                                 // The location of Uluru
                                 var uluru = { lat: 43.259121, lng: -79.920842 };
                                 // The map, centered at Uluru
-                                var map = new google.maps.Map(
-                                    document.getElementById('map-container'), { zoom: 15, center: uluru });
+                                var map = new google.maps.Map(document.getElementById('map-container'), {
+                                    zoom: 15, 
+                                    center: uluru,
+                                    styles: [
+                                        {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
+                                        {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
+                                        {elementType: 'labels.text.fill', stylers: [{color: '#ba4848'}]},
+                                        {
+                                        featureType: 'administrative.locality',
+                                        elementType: 'labels.text.fill',
+                                        stylers: [{color: '#9b0d0d'}]
+                                        },
+                                        {
+                                        featureType: 'poi',
+                                        elementType: 'labels.text.fill',
+                                        stylers: [{color: '#ba4848'}]
+                                        },
+                                        {
+                                        featureType: 'poi.park',
+                                        elementType: 'geometry',
+                                        stylers: [{color: '#263c3f'}]
+                                        },
+                                        {
+                                        featureType: 'poi.park',
+                                        elementType: 'labels.text.fill',
+                                        stylers: [{color: '#6b9a76'}]
+                                        },
+                                        {
+                                        featureType: 'road',
+                                        elementType: 'geometry',
+                                        stylers: [{color: '#38414e'}]
+                                        },
+                                        {
+                                        featureType: 'road',
+                                        elementType: 'geometry.stroke',
+                                        stylers: [{color: '#212a37'}]
+                                        },
+                                        {
+                                        featureType: 'road',
+                                        elementType: 'labels.text.fill',
+                                        stylers: [{color: '#9ca5b3'}]
+                                        },
+                                        {
+                                        featureType: 'road.highway',
+                                        elementType: 'geometry',
+                                        stylers: [{color: '#720a0a'}]
+                                        },
+                                        {
+                                        featureType: 'road.highway',
+                                        elementType: 'geometry.stroke',
+                                        stylers: [{color: '#1f2835'}]
+                                        },
+                                        {
+                                        featureType: 'road.highway',
+                                        elementType: 'labels.text.fill',
+                                        stylers: [{color: '#ba4848'}]
+                                        },
+                                        {
+                                        featureType: 'transit',
+                                        elementType: 'geometry',
+                                        stylers: [{color: '#2f3948'}]
+                                        },
+                                        {
+                                        featureType: 'transit.station',
+                                        elementType: 'labels.text.fill',
+                                        stylers: [{color: '#d59563'}]
+                                        },
+                                        {
+                                        featureType: 'water',
+                                        elementType: 'geometry',
+                                        stylers: [{color: '#17263c'}]
+                                        },
+                                        {
+                                        featureType: 'water',
+                                        elementType: 'labels.text.fill',
+                                        stylers: [{color: '#515c6d'}]
+                                        },
+                                        {
+                                        featureType: 'water',
+                                        elementType: 'labels.text.stroke',
+                                        stylers: [{color: '#17263c'}]
+                                        }
+                                        ] 
+                                    });
                                 // The marker, positioned at Uluru
                                 var marker = new google.maps.Marker({ position: uluru, map: map, title: "MAC RoboMaster" });
                             }
