add instagram plugin

--- a/index.html
+++ b/index.html
@@ -475,6 +475,19 @@
                 </div>
             </div>
 
+            <!-- instagram gallery -->
+            <div id="instagram" class="section section-dark text-center">
+                <div class="container">
+                    <h1 class="title">Our Instagram Gallery</h1>
+
+
+                    <div data-is data-is-access-token="9410218449.6142d53.c11ca6c6e0c24a9fa7548d882ecc918c"
+                        data-is-cache-media-time="2500" data-is-rows="2"></div>
+
+                </div>
+
+            </div>
+
             <!-- Contact Us -->
             <div id="contact" class="section text-center">
                 <div class="container">
@@ -756,5 +769,10 @@
 
 <!--  Paper Kit Initialization and functons -->
 <script src="assets/js/paper-kit.js?v=2.1.0"></script>
+
+<!-- plugin for the instgram show -->
+<script src="assets/js/infinitescroll.js"></script>
+<script src="assets/js/jquery.instashow-lite.packaged.js"></script>
+
 
 </html>
