--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- Page -->
     <div class="wrapper">
         <!-- Header -->
-        <div class="page-header" data-parallax="true" style="background-color: black">
+        <div class="" data-parallax="true" style="background-color: black">
 
             <style>
                 body {
