--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           display: none;
           position: fixed;
           bottom: 20px;
-          right: 30px;
+          right: 20px;
           z-index: 99;
           font-size: 40px;
           border: none;
@@ -761,8 +761,7 @@
                                 <a class="nav-link" href="" target="_blank"><i class="fab fa-youtube"></i></a>
                             </li>
                             <li>
-                                <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster" target="_blank"><i
-                                        class="fab fa-linkedin"></i></a>
+                                <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster" target="_blank"><i class="fab fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </nav>
