--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     <li class="nav-item">
                         <a href="#about" class="nav-link"><i></i> About</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="#projects" class="nav-link"><i></i> Projects</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="#team" class="nav-link"><i></i> Team</a>
                     </li>
@@ -62,7 +62,10 @@
                         <a href="#sponsors" class="nav-link"><i></i> Sponsors</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link"><i></i> Contact Us</a>
+                        <a href="#contact" class="nav-link"><i></i> Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#join" class="nav-link"><i></i> Join Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://facebook.com/MACRoboMaster"
@@ -204,10 +207,15 @@
                     <div class="row">
                         <div class="col-md-8 ml-auto mr-auto">
                             <h1 class="title">About Us</h1>
-                            <h5 id="test" class="description animated">MAC RoboMaster is a student-run team at McMaster
-                                designing and
-                                manufacturing RC and fully-autonomous robots to compete in the yearly RoboMaster
-                                Robotics Competition.</h5>
+                            <h5 id="test" class="description animated">MAC RoboMaster is a team of highly motivated and
+                                passionate students from the McMaster University located in Ontario, Canada. We
+                                participate in the yearly RoboMaster Robotics Competition where we compete against
+                                universities all over the world. Each season, the team is tasked with developing a
+                                group of RC and autonomous battle robots from the ground up. This multidisciplinary
+                                project is no small task, but we love what we do and are committed to learning and
+                                developing as future professionals. We come from many faculties within engineering as
+                                well as business, and strive for excellence every day.
+                            </h5>
                             <br>
                             <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
                         </div>
@@ -536,7 +544,7 @@
             </div>
 
             <!-- instagram gallery -->
-            <div id="instagram" class="section section-dark text-center container-fluid">
+            <div id="instagram" class="section section-dark text-center container-fluid" style="background-image: url('assets/img/inst.jpg')">
                 <div class="container">
                     <h1 class="title">Our Instagram Gallery</h1>
                     <br />
@@ -733,14 +741,41 @@
                         <br />
                     </div>
 
-                    <div class="col-md-12 ml-auto mr-auto">
-                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
-                            type="button">Join Us</button>
-                    </div>
+
                 </div>
             </div>
         </div>
 
+
+
+        <!-- Join Us -->
+        <div id="join" class="section section-dark text-center container-fluid" style="background-image: url('assets/img/background.jpg')">
+            
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 ml-auto mr-auto">
+                        <h1 class="title">Join Our Team</h1>
+                        <h5 id="test" class="description animated">We take pride in the development of everyone on the
+                            team. The experience and skills that people develop in all areas is better than anything
+                            that could be achieved at a similar age in the workplace. Our team is a challenge in
+                            engineering, business, and project management; we are always looking for new members to
+                            expand our team in a diverse range of faculties from engineering to business. Come to our
+                            recruitment sessions or just reach out if you are interested in what we do.
+                        </h5>
+
+                        <h4 id="test" class="description animated" style="color: white">
+                            Feel free to come out if you are interested in learning more about our team!
+                        </h4>
+                        <br>
+                        <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
+                    </div>
+                    <div class="col-md-12 ml-auto mr-auto">
+                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
+                            type="button">Apply Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
@@ -761,7 +796,8 @@
                                 <a class="nav-link" href="" target="_blank"><i class="fab fa-youtube"></i></a>
                             </li>
                             <li>
-                                <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster" target="_blank"><i
+                                        class="fab fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </nav>
