--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <!-- About Us -->
             <div id="about" class="section text-center container-fluid">
                 <div class="container">
-                    <div class="row">
+                    <div class="row animatable fadeInUp">
                         <div class="col-md-8 ml-auto mr-auto">
                             <h1 class="title">About Us</h1>
                             <h5 id="test" class="description animated">MAC RoboMaster is a team of highly motivated and
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                     <br /><br />
-                    <div class="row">
+                    <div class="row animatable fadeInUp">
                         <div class="col-md-3">
                             <div class="info">
                                 <div class="icon icon-danger">
@@ -340,7 +340,7 @@
                 <div class="container">
                     <h1 class="title">Our Team</h1>
                     <h2 class="title">Executives</h2>
-                    <div class="row">
+                    <div class="row animatable fadeInUp">
                         <!-- JBC -->
                         <div class="col-md-4">
                             <div class="card card-profile card-plain">
@@ -457,7 +457,7 @@
                     </div>
                     <!-- Advisors -->
                     <h2 class="title">Advisors</h2>
-                    <div class="row">
+                    <div class="row animatable fadeInUp">
                         <!-- Dr. Yaser Haddara -->
                         <div class="col-md-4">
                             <div class="card card-profile card-plain">
@@ -662,7 +662,7 @@
                                 var marker = new google.maps.Marker({ position: uluru, map: map, title: "MAC RoboMaster" });
                             }
                         </script>
-                        <div class="col-md-6 ">
+                        <div class="col-md-6 animatable bounceInRight">
                             <div class="card card-profile card-plain" style="height: 100%; width: 100% ">
                                 <div class="card-body">
                                     <p class="card-description" style="text-align: left">
@@ -751,7 +751,7 @@
         <!-- Join Us -->
         <div id="join" class="section section-dark text-center container-fluid" style="background-image: url('assets/img/background.jpg')">
             
-            <div class="container">
+            <div class="container animatable fadeInUp">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
                         <h1 class="title">Join Our Team</h1>
@@ -870,6 +870,9 @@
 <!-- Plugin for the instgram show -->
 <script src="assets/js/infinitescroll.js"></script>
 <script src="assets/js/jquery.instashow-lite.packaged.js"></script>
+
+<!-- animate -->
+<script src="assets/js/animate.js"></script>
 
 
 
