--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@
                 <div class="container">
                     <h1 class="title">Our Team</h1>
                     <h2 class="title">Executives</h2>
-                    <div class="row">
+                    <div class="row animatable fadeInUp">
                         <!-- JBC -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-4">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/jbc.jpg" alt="..."></a>
@@ -365,7 +365,7 @@
                             </div>
                         </div>
                         <!-- Haoran Liu -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-4">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/haoran2.jpg" alt="..."></a>
@@ -383,7 +383,7 @@
                             </div>
                         </div>
                         <!-- Leo Liu -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-4">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/leo.jpg" alt="..."></a>
@@ -401,7 +401,7 @@
                             </div>
                         </div>
                         <!-- Jarvis Wang -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-4">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/jarvis.jpg" alt="..."></a>
@@ -419,7 +419,7 @@
                             </div>
                         </div>
                         <!-- Edward Yu -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-4">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/edward.jpg" alt="..."></a>
@@ -437,7 +437,7 @@
                             </div>
                         </div>
                         <!-- Tony Yang -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-4">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/tony.jpg" alt="..."></a>
@@ -457,9 +457,9 @@
                     </div>
                     <!-- Advisors -->
                     <h2 class="title">Advisors</h2>
-                    <div class="row">
+                    <div class="row animatable fadeInUp">
                         <!-- Dr. Yaser Haddara -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-4">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/yaser.jpg" alt="..."></a>
@@ -478,7 +478,7 @@
                             </div>
                         </div>
                         <!-- Dr. Tim Davidson -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-4">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/davidsontim.jpg" alt="..."></a>
@@ -497,7 +497,7 @@
                             </div>
                         </div>
                         <!-- Dr. Shahin Sirouspour -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-4">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/sirouspour.jpg" alt="..."></a>
