--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <video autoplay muted loop id="myVideo">
                     <source src="./assets/img/videos/trim.mp4" type="video/mp4">
                 </video>
-                <div class="overlay-desc">
+                <div class="overlay-desc animatable fadeInUp">
                     <h1>BUILD THE FUTURE OF ARTIFICIAL INTELLIGENCE AND ROBOTICS</h1>
                 </div>
             </div>
@@ -278,7 +278,7 @@
 
             <!-- Projects -->
             <div id="projects" class="section text-center container-fluid" id="carousel" style="background-color: #292E39">
-                <div class="container">
+                <div class="container animatable fadeInUp">
                     <h1 class="title" style="color:white">Projects</h1>
                     <div class="row">
                         <div class="col-md-8 ml-auto mr-auto">
@@ -338,11 +338,11 @@
             <!-- Our Team -->
             <div id="team" class="section section-dark text-center container-fluid">
                 <div class="container">
-                    <h1 class="title">Our Team</h1>
-                    <h2 class="title">Executives</h2>
-                    <div class="row animatable fadeInUp">
+                    <h1 class="title animatable fadeInUp">Our Team</h1>
+                    <h2 class="title animatable fadeInUp">Executives</h2>
+                    <div class="row">
                         <!-- JBC -->
-                        <div class="col-md-4">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/jbc.jpg" alt="..."></a>
@@ -365,7 +365,7 @@
                             </div>
                         </div>
                         <!-- Haoran Liu -->
-                        <div class="col-md-4">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/haoran2.jpg" alt="..."></a>
@@ -383,7 +383,7 @@
                             </div>
                         </div>
                         <!-- Leo Liu -->
-                        <div class="col-md-4">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/leo.jpg" alt="..."></a>
@@ -401,7 +401,7 @@
                             </div>
                         </div>
                         <!-- Jarvis Wang -->
-                        <div class="col-md-4">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/jarvis.jpg" alt="..."></a>
@@ -419,7 +419,7 @@
                             </div>
                         </div>
                         <!-- Edward Yu -->
-                        <div class="col-md-4">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/edward.jpg" alt="..."></a>
@@ -437,7 +437,7 @@
                             </div>
                         </div>
                         <!-- Tony Yang -->
-                        <div class="col-md-4">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/tony.jpg" alt="..."></a>
@@ -456,10 +456,10 @@
                         </div>
                     </div>
                     <!-- Advisors -->
-                    <h2 class="title">Advisors</h2>
+                    <h2 class="title animatable fadeInUp">Advisors</h2>
                     <div class="row animatable fadeInUp">
                         <!-- Dr. Yaser Haddara -->
-                        <div class="col-md-4">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/yaser.jpg" alt="..."></a>
@@ -478,7 +478,7 @@
                             </div>
                         </div>
                         <!-- Dr. Tim Davidson -->
-                        <div class="col-md-4">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/davidsontim.jpg" alt="..."></a>
@@ -497,7 +497,7 @@
                             </div>
                         </div>
                         <!-- Dr. Shahin Sirouspour -->
-                        <div class="col-md-4">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="#avatar"><img src="./assets/img/faces/sirouspour.jpg" alt="..."></a>
@@ -526,16 +526,16 @@
             <!-- Sponsors -->
             <div id="sponsors" class="section text-center container-fluid">
                 <div class="container">
-                    <h1 class="title">Sponsors</h1>
+                    <h1 class="title animatable fadeInUp">Sponsors</h1>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-sm-4 animatable fadeInUp">
                             <img src="./assets/img/sponsors/maceng.png" style="height: 100px">
                         </div>
 
-                        <div class="col-sm-4">
+                        <div class="col-sm-4 animatable fadeInUp">
                             <img src="./assets/img/sponsors/dji.jpg" style="height: 120px">
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-4 animatable fadeInUp">
                             <img src="./assets/img/sponsors/mcmaster.png" style="height: 100px">
                         </div>
 
@@ -545,7 +545,7 @@
 
             <!-- instagram gallery -->
             <div id="instagram" class="section section-dark text-center container-fluid" style="background-image: url('assets/img/inst.jpg')">
-                <div class="container">
+                <div class="container animatable fadeInUp">
                     <h1 class="title">Our Instagram Gallery</h1>
                     <br />
                     <br />
@@ -559,10 +559,10 @@
             <!-- Contact Us -->
             <div id="contact" class="section text-center container-fluid">
                 <div class="container">
-                    <h1 class="title">Contact Us</h1>
+                    <h1 class="title animatable fadeInUp">Contact Us</h1>
                     <div class="row">
                         <!--Google map-->
-                        <div class="col-md-6">
+                        <div class="col-md-6 animatable fadeInUp" >
                             <div id="map-container" class="card card-profile card-plain" style="height: 300px; width: 100% ">
                             </div>
                         </div>
@@ -714,7 +714,7 @@
 
         <!-- Donate Us -->
         <div id="donate" class="section text-center container-fluid">
-            <div class="container">
+            <div class="container animatable fadeInUp">
                 <h1 class="title">Why Sponsors Us</h1>
                 <div class="row">
                     <div class="col-md-12 ml-auto mr-auto">
