--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                     <h1 class="title animatable fadeInUp">Contact Us</h1>
                     <div class="row">
                         <!--Google map-->
-                        <div class="col-md-6 animatable fadeInUp" >
+                        <div class="col-md-6 animatable fadeInUp">
                             <div id="map-container" class="card card-profile card-plain" style="height: 300px; width: 100% ">
                             </div>
                         </div>
@@ -716,7 +716,18 @@
         <div id="donate" class="section text-center container-fluid">
             <div class="container animatable fadeInUp">
                 <h1 class="title">Why Sponsors Us</h1>
-                <div class="row">
+                <div class="row animatable fadeInUp">
+                    <div class="col-md-12 ml-auto mr-auto">
+                        <h5 id="test" class="description animated">
+                            As an innovative engineering group which is specializing in designing, reframing and aiming
+                            to provide an unique experience of combining in-class theoriotical knowledge and practical
+                            field application in order to generate an opportunity for McMaster University students to
+                            explore their true talent and potential. With the great goal like this, we are in urgently
+                            demand of key stakeholders who are sharing the same vision and willing to participating in
+                            the process of assisting us achiving this goal!
+                        </h5>
+                    </div>
+
                     <div class="col-md-12 ml-auto mr-auto">
                         <img src="./assets/img/logo_master.png" alt="" style="width:50%">
                     </div>
@@ -750,7 +761,7 @@
 
         <!-- Join Us -->
         <div id="join" class="section section-dark text-center container-fluid" style="background-image: url('assets/img/background.jpg')">
-            
+
             <div class="container animatable fadeInUp">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
