--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                     <a href="#paper-kit">
                                         <div class="author">
                                             <h4 class="card-title">Bingchen Ji</h4>
-                                            <h6 class="card-category">Team Captain</h6>
+                                            <h6 class="card-category"></h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -374,7 +374,7 @@
                                     <a href="#paper-kit">
                                         <div class="author">
                                             <h4 class="card-title">Haoran Liu</h4>
-                                            <h6 class="card-category">Project Manager</h6>
+                                            <h6 class="card-category"></h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -392,7 +392,7 @@
                                     <a href="#paper-kit">
                                         <div class="author">
                                             <h4 class="card-title">Leo Liu</h4>
-                                            <h6 class="card-category">Vice Captain</h6>
+                                            <h6 class="card-category"></h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -410,7 +410,7 @@
                                     <a href="#paper-kit">
                                         <div class="author">
                                             <h4 class="card-title">Jarvis Wang</h4>
-                                            <h6 class="card-category">PR Manager</h6>
+                                            <h6 class="card-category"></h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -428,7 +428,7 @@
                                     <a href="#paper-kit">
                                         <div class="author">
                                             <h4 class="card-title">Edward Yu</h4>
-                                            <h6 class="card-category">Business Manager</h6>
+                                            <h6 class="card-category"></h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -446,7 +446,7 @@
                                     <a href="#paper-kit">
                                         <div class="author">
                                             <h4 class="card-title">Tony Yang</h4>
-                                            <h6 class="card-category">Mechanical Lead</h6>
+                                            <h6 class="card-category"></h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
