--- a/index.html
+++ b/index.html
@@ -526,16 +526,26 @@
             <!-- Sponsors -->
             <div id="sponsors" class="section text-center container-fluid">
                 <div class="container">
-                    <h1 class="title animatable fadeInUp">Sponsors</h1>
+                    <h1 class="title animatable fadeInUp">Sponsors & Partners</h1>
+                    <br />
+                    <br />
+                    <br />
+
+
                     <div class="row">
-                        <div class="col-sm-4 animatable fadeInUp">
+                        <div class="col-sm-3 animatable fadeInUp">
                             <img src="./assets/img/sponsors/maceng.png" style="height: 100px">
                         </div>
 
-                        <div class="col-sm-4 animatable fadeInUp">
+                        <div class="col-sm-3 animatable fadeInUp">
                             <img src="./assets/img/sponsors/dji.jpg" style="height: 120px">
                         </div>
-                        <div class="col-sm-4 animatable fadeInUp">
+
+                        <div class="col-sm-3 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/nvidia.png" style="height: 120px">
+                        </div>
+
+                        <div class="col-sm-3 animatable fadeInUp">
                             <img src="./assets/img/sponsors/mcmaster.png" style="height: 100px">
                         </div>
 
